Build modified to work with typetools/jdk17u, spotless and TestNG instead of JUnit